--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
+
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+mat-dialog-container {
+  background-color: rgb(46, 82, 102) !important;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+}
