--- a/src/app/home/video/video.component.scss
+++ b/src/app/home/video/video.component.scss
@@ -744,7 +744,7 @@ $break-big: 900px;
 #video-wrapper {
 	text-align: center;
     background-color: #343434;
-	border-radius: 4px;
+	border-radius: 15px;
 	height: 85vh;
 }
 
@@ -753,19 +753,27 @@ $break-big: 900px;
 	max-height: 90vh;
 	border-radius: 4px;
 	height: 85vh;
+	object-fit: cover;
+}
+
+#end-video-btn {
+	position: absolute;
+	bottom: 0.1rem;
+	left: 1.5rem;
 }
 
 #local-video {
-    	z-index: 1;
-    	position: absolute;
-    	right: 1.5rem;
-	bottom: 1.5rem;
+	z-index: 1;
+	position: absolute;
+	right: 1.5rem;
+	bottom: 0.5rem;
 	width: 10vw;
 	height: 10vw;
 	max-width: 10rem;
 	max-height: 10rem;
 	border: 3px solid white;
 	border-radius: 4px;
+	object-fit: cover;
 
 	@media screen and (max-width: $break) {
 	  	width: 30vw;
