--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -102,7 +102,7 @@
               </li>
               <li class=" dropdown-divider"></li>
               <li class=" nav-link">
-                <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
+                <a class=" nav-item" (click)="onLogOut()" href="javascript:void(0)"  ngbDropdownItem>
                   Log out
                 </a>
               </li>
