--- a/src/app/home/chat/chat.component.scss
+++ b/src/app/home/chat/chat.component.scss
@@ -77,6 +77,30 @@ $break-big: 900px;
 }
 
 
+body > app-root > app-home > div.wrapper > div.main-panel {
+	@media screen and (max-width: 250px) {
+		width: 100%;
+		max-height: fit-content;
+		padding: 0px;
+		padding-left: 0px !important;
+		height: 100vh;
+    }
+
+}
+
+
+.content {
+
+	@media screen and (max-width: 360px) {
+		width: 100%;
+		height: fit-content;
+		//padding: 0px;
+		padding-left: 0px !important;
+    }
+
+}
+
+
 
 #frame {
   background: transparent;
@@ -93,6 +117,12 @@ $break-big: 900px;
 			width: 100%;
 			height: 100vh;
 	}
+
+	// @media screen and (max-width: 250px) {
+	// 	width: 100%;
+	// 	height: 100vh;
+    // }
+
 	
 	#sidepanel {
     border-radius: 20px 0px 0px 20px;
@@ -617,17 +647,23 @@ $break-big: 900px;
 		height: 100%;
 		overflow: hidden;
 		position: relative;
-    padding: 0px;
-    padding-left: 0px !important;
+        padding: 0px;
+        padding-left: 0px !important;
 		@media screen and (max-width: $break) {
 			width: calc(100% - 58px);		
-			min-width: 300px !important;
-      //padding-left: 0px !important;
+			min-width: 100px !important;
+
       
 		}
+
+		@media screen and (max-width: 250px) {
+			width: calc(100% - 58px);		
+			min-width: 100px !important;     
+		}
+
 		@media screen and (min-width: $break-big) {
 			width: calc(100% - 340px);
-      padding-left: 0px !important;
+            padding-left: 0px !important;
 
 		}
 		
@@ -636,7 +672,7 @@ $break-big: 900px;
 			height: 60px;
 			//line-height: 60px;
 			background: $dark;
-      padding: 0px;
+            padding: 0px;
 			
 			img {
 				width: 40px;
@@ -649,8 +685,8 @@ $break-big: 900px;
 			
 			p {
 				float: left;
-        margin-top: 18px;
-        font-weight: bolder;
+				margin-top: 18px;
+				font-weight: bolder;
 			}
 			
 			.social-media {
@@ -1134,4 +1170,21 @@ color : #2f3640;
 	transform: scale(1.3);
 	margin-right: 25px;
 	color: #a3e4e9;
+}
+
+
+
+
+#add-user-icon-chat {
+	
+	&:hover {
+		color: #2ecc71;
+	}
+}
+
+#add-user-icon-circle {
+	
+	&:hover {
+		color: #2ecc71;
+	}
 }
