--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <span class=" navbar-toggler-bar bar3"> </span>
           </button>
         </div>
-        <a class=" navbar-brand" href="javascript:void(0)"> {{ getTitle() }} </a>
+        <!-- <a class=" navbar-brand" href="javascript:void(0)"> {{ getTitle() }} </a> -->
       </div>
       <button
         aria-label="Toggle navigation"
@@ -51,27 +51,7 @@
             <ul class=" dropdown-menu-right dropdown-navbar" ngbDropdownMenu>
               <li class=" nav-link">
                 <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                  Mike John responded to your email
-                </a>
-              </li>
-              <li class=" nav-link">
-                <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                  You have 5 more tasks
-                </a>
-              </li>
-              <li class=" nav-link">
-                <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                  Your friend Michael is in town
-                </a>
-              </li>
-              <li class=" nav-link">
-                <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                  Another notification
-                </a>
-              </li>
-              <li class=" nav-link">
-                <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                  Another one
+                  You have 0 notification
                 </a>
               </li>
             </ul>
