--- a/src/app/authentication/authentication.component.scss
+++ b/src/app/authentication/authentication.component.scss
@@ -23,7 +23,7 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	background:rgba(161, 15, 83, 0.644);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -87,11 +87,12 @@ a{color:inherit;text-decoration:none}
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
-	color:#aaa;
+	color:rgb(241, 238, 238);
+	font-weight: bolder;
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#1161ee;
+	background:#ff10c3;
 }
 .login-form .group label .icon{
 	width:15px;
